--- a/Inventario_Si.ipynb
+++ b/Inventario_Si.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7QB1kXjAScXe931hXWevk",
+      "authorship_tag": "ABX9TyPYfSp/dF7n3sWXXJ50f4tq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "i1nmEDXKWjvZ"
       },
-      "execution_count": 637,
+      "execution_count": 876,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "JO6pLs7ZWlpn"
       },
-      "execution_count": 638,
+      "execution_count": 877,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "XsMqS3Gcqzvv"
       },
-      "execution_count": 639,
+      "execution_count": 878,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "7uJ70a3ZNigJ"
       },
-      "execution_count": 640,
+      "execution_count": 879,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "0T6RvzfCOJfa"
       },
-      "execution_count": 641,
+      "execution_count": 880,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "RqLsooXbUYtO"
       },
-      "execution_count": 642,
+      "execution_count": 881,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "xYfqxQYZriCd"
       },
-      "execution_count": 643,
+      "execution_count": 882,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "fEm8gPksWQ6l"
       },
-      "execution_count": 644,
+      "execution_count": 883,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "zH-nb29BcQhR"
       },
-      "execution_count": 645,
+      "execution_count": 884,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "UBphN0ZzkA_w"
       },
-      "execution_count": 646,
+      "execution_count": 885,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "xgaRaL_jShTw"
       },
-      "execution_count": 647,
+      "execution_count": 886,
       "outputs": []
     },
     {
@@ -311,9 +311,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kbjLLNKj1Kgl",
-        "outputId": "b73e1922-0c5f-4162-f267-1155ca03d1b8"
+        "outputId": "bb0a631e-4428-4d70-fec6-9e3e43b9ceaf"
       },
-      "execution_count": 648,
+      "execution_count": 887,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,18 +322,18 @@
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
             "| Meses | Inventario Inicial |     # Aleatorio     | Demanda | Inventario Final | Faltantes | Ordenes | Inventario mensual promedio |\n",
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
-            "|   1   |        150         |  0.5355333610151897 |    60   |        90        |     0     |    1    |            120.0            |\n",
-            "|   2   |         90         |  0.382552807102415  |    48   |        42        |     0     |    0    |             66.0            |\n",
-            "|   3   |         42         | 0.29028331613346836 |    41   |       201        |     0     |    0    |             21.5            |\n",
-            "|   4   |        201         |  0.4847845793562343 |    39   |       162        |     0     |    0    |            181.5            |\n",
-            "|   5   |        162         |  0.6149925598341067 |    40   |       122        |     0     |    0    |            142.0            |\n",
-            "|   6   |        122         |  0.6626982233786741 |    36   |        86        |     0     |    1    |            104.0            |\n",
-            "|   7   |         86         |  0.6913693388431418 |    41   |       245        |     0     |    0    |             65.5            |\n",
-            "|   8   |        245         | 0.14608391602961468 |    37   |       208        |     0     |    0    |            226.5            |\n",
-            "|   9   |        208         |  0.5800062703487415 |    51   |       157        |     0     |    0    |            182.5            |\n",
-            "|   10  |        157         |  0.8074514456141746 |    64   |        93        |     0     |    1    |            125.0            |\n",
-            "|   11  |         93         | 0.16668101471559638 |    55   |        38        |     0     |    0    |             65.5            |\n",
-            "|   12  |         38         |  0.0789017097992506 |    54   |        0         |     16    |    0    |              13             |\n",
+            "|   1   |        150         |  0.8858586253342164 |    66   |        84        |     0     |    1    |            117.0            |\n",
+            "|   2   |         84         |  0.891575064920636  |    55   |        29        |     0     |    0    |             56.5            |\n",
+            "|   3   |         29         | 0.43650211263208694 |    44   |        0         |     15    |    0    |              10             |\n",
+            "|   4   |         0          |  0.9725764333495572 |    46   |       200        |     46    |    0    |              0              |\n",
+            "|   5   |        200         |  0.8434768782452985 |    43   |       157        |     0     |    0    |            178.5            |\n",
+            "|   6   |        157         |  0.7067245225389025 |    36   |       121        |     0     |    0    |            139.0            |\n",
+            "|   7   |        121         |  0.7071235600108846 |    41   |        80        |     0     |    1    |            100.5            |\n",
+            "|   8   |         80         | 0.22969132397224934 |    40   |        40        |     0     |    0    |             60.0            |\n",
+            "|   9   |         40         |  0.3526433191976166 |    47   |       200        |     7     |    0    |              17             |\n",
+            "|   10  |        200         |  0.8570529632469479 |    66   |       134        |     0     |    0    |            167.0            |\n",
+            "|   11  |        134         |  0.8999019466853572 |    72   |        62        |     0     |    1    |             98.0            |\n",
+            "|   12  |         62         |  0.0960037858191809 |    56   |       206        |     0     |    0    |             34.0            |\n",
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n"
           ]
         }
@@ -368,17 +368,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-lYuyKt2vfY",
-        "outputId": "851a6bd7-ac12-4a72-d512-839742fccff3"
+        "outputId": "898294f9-6029-4d43-b5e7-db5abb2e3e9d"
       },
-      "execution_count": 649,
+      "execution_count": 888,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Total de ordenes: 200\n",
-            "Faltas totales : 16\n",
-            "Total de Impuestos: 1313.0\n"
+            "Faltas totales : 68\n",
+            "Total de Impuestos: 977.5\n"
           ]
         }
       ]
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "nzbFrjZJ3Hlx"
       },
-      "execution_count": 650,
+      "execution_count": 889,
       "outputs": []
     },
     {
@@ -411,18 +411,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YVjymGXP5qa4",
-        "outputId": "d09327ed-58dc-43b2-8902-c4719d966dca"
+        "outputId": "8699409a-b0bc-45f8-98ea-db040e44b1a6"
       },
-      "execution_count": 651,
+      "execution_count": 890,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Costo Final:  3292.71\n",
+            " Costo Final:  5332.425\n",
             " Costo ordenes:  300\n",
-            " Costo llevar inventario:  2192.71\n",
-            " Costo faltante:  800\n"
+            " Costo llevar inventario:  1632.425\n",
+            " Costo faltante:  3400\n"
           ]
         }
       ]
@@ -449,22 +449,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "48W2whFx7agL",
-        "outputId": "d31d04d3-8481-4330-e76a-16378966a4c1"
+        "outputId": "6bf702b8-ff94-4146-b0b5-a6b40d8bc6ac"
       },
-      "execution_count": 652,
+      "execution_count": 891,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+------------------------------+---------+\n",
-            "|      Concepto del Costo      |  Costo  |\n",
-            "+------------------------------+---------+\n",
-            "|         Costo Final          | 3292.71 |\n",
-            "|       Costo de Órdenes       |   300   |\n",
-            "| Costo de Mantener Inventario | 2192.71 |\n",
-            "|      Costo por Faltante      |   800   |\n",
-            "+------------------------------+---------+\n"
+            "+------------------------------+----------+\n",
+            "|      Concepto del Costo      |  Costo   |\n",
+            "+------------------------------+----------+\n",
+            "|         Costo Final          | 5332.425 |\n",
+            "|       Costo de Órdenes       |   300    |\n",
+            "| Costo de Mantener Inventario | 1632.425 |\n",
+            "|      Costo por Faltante      |   3400   |\n",
+            "+------------------------------+----------+\n"
           ]
         }
       ]
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "DqnNsoBoQ1pY"
       },
-      "execution_count": 653,
+      "execution_count": 892,
       "outputs": []
     },
     {
@@ -585,18 +585,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SiMfwhiFAK6C",
-        "outputId": "a3c035ec-470b-408e-dab0-071ae2abb5f6"
+        "outputId": "0388ec70-e770-4acf-c998-e66bbfa9ab26"
       },
-      "execution_count": 654,
+      "execution_count": 893,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Costo de ordenar promedio 308.3333333333333\n",
-            "Costo de llevar inventario promedio 2102.3212499999995\n",
-            "Costo faltante promedio 2525.0\n",
-            "Costo total promedio 4935.654583333333\n"
+            "Costo de ordenar promedio 258.3333333333333\n",
+            "Costo de llevar inventario promedio 1938.4525\n",
+            "Costo faltante promedio 4295.833333333333\n",
+            "Costo total promedio 6492.619166666666\n"
           ]
         }
       ]
@@ -612,108 +612,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Algoritmo de Hooke-Jeeves\n",
-        "def hooke_jeeves(f, x0, delta=0.5, epsilon=1e-5, max_iter=100):\n",
-        "    n = len(x0)\n",
-        "    x = np.array(x0)\n",
-        "    xp = np.array(x0)\n",
-        "    xb = np.array(x0)\n",
-        "    for i in range(max_iter):\n",
-        "        for j in range(n):\n",
-        "            d = np.zeros(n)\n",
-        "            d[j] = delta\n",
-        "            if f(xb + d) < f(xb):\n",
-        "                xb = xb + d\n",
-        "            elif f(xb - d) < f(xb):\n",
-        "                xb = xb - d\n",
-        "        if np.linalg.norm(xb - xp) < epsilon:\n",
-        "            break\n",
-        "        xp = xb + (xb - xp)\n",
-        "        if f(xp) < f(xb):\n",
-        "            xb = xp\n",
-        "        x = xb\n",
-        "    return xb\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Función de costo total para optimizar\n",
-        "def costo_total(params):\n",
-        "    uordenar, nuevaorden = params\n",
-        "    _, _, _, costofinall = simu(uordenar, nuevaorden,1000)\n",
-        "    return costofinall\n",
-        "\n",
-        "\n",
-        "x0 = [200, 100]\n",
-        "\n",
-        "# Encontrar el óptimo\n",
-        "optimo = hooke_jeeves(costofinal, x0)\n",
-        "uordenar_opt, nuevaorden_opt = optimo\n",
-        "\n",
-        "print(f\"Óptimo No_de_unidades_a_ordenar: {uordenar_opt}\")\n",
-        "print(f\"Óptimo reorden: {nuevaorden_opt}\")\n",
-        "\n",
-        "# Calcular los costos con los valores óptimos\n",
-        "costoord_opt, costoinv_opt, costof_inv, costofinal_opt = simu(uordenar_opt, nuevaorden_opt)\n",
-        "print(f\"Costo a ordenar óptimo: {costoord_opt}\")\n",
-        "print(f\"Costo de llevar el inventario óptimo: {costoinv_opt}\")\n",
-        "print(f\"Costo faltante óptimo: {costof_opt}\")\n",
-        "print(f\"Costo total óptimo: {costofinal_opt}\")"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 348
-        },
-        "id": "HF6b_Q_nIdht",
-        "outputId": "4c03fd8c-e32c-4e28-e804-1003eb8fe580"
+        "id": "HF6b_Q_nIdht"
       },
-      "execution_count": 655,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'float' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-655-8369e906373c>\u001b[0m in \u001b[0;36m<cell line: 35>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# Encontrar el óptimo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0moptimo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhooke_jeeves\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcostofinal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0muordenar_opt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnuevaorden_opt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-655-8369e906373c>\u001b[0m in \u001b[0;36mhooke_jeeves\u001b[0;34m(f, x0, delta, epsilon, max_iter)\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m                 \u001b[0mxb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxb\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'float' object is not callable"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Función de costo total para optimizar\n",
-        "def costo_total(params):\n",
-        "    uordenar, nuevaorden = params\n",
-        "    _, _, _, costofinal = simu(ordenes, nuevaorden,1000)\n",
-        "    return costofinal\n",
-        "\n",
-        "# Parâmetros iniciales: [No_de_unidades_a_ordenar, reorden]\n",
-        "x0 = [200, 100]\n",
-        "\n",
-        "# Encontrar el óptimo\n",
-        "optimo = hooke_jeeves(costofinal, x0)\n",
-        "uoptimas, ordenoptimo = optimo\n",
-        "\n",
-        "print(f\"Óptimo No_de_unidades_a_ordenar: {uoptimos}\")\n",
-        "print(f\"Óptimo reorden: {ordenoptimo}\")\n",
-        "\n",
-        "# Calcular los costos con los valores óptimos\n",
-        "costoord_opt, costoinv_opt, costof_inv, costofinal_opt = simu(uoptimos, ordenoptimo)\n",
-        "print(f\"Costo a ordenar óptimo: {costoord_opt}\")\n",
-        "print(f\"Costo de llevar el inventario óptimo: {costoinv_opt}\")\n",
-        "print(f\"Costo faltante óptimo: {costof_opt}\")\n",
-        "print(f\"Costo total óptimo: {costofinal_opt}\")"
-      ],
-      "metadata": {
-        "id": "_39x29y7Kb8b"
-      },
-      "execution_count": null,
+      "execution_count": 893,
       "outputs": []
     },
     {
