--- a/Inventario_Si.ipynb
+++ b/Inventario_Si.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYfSp/dF7n3sWXXJ50f4tq",
+      "authorship_tag": "ABX9TyOYtMCM/mkBKfo3iTuI12Oh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "i1nmEDXKWjvZ"
       },
-      "execution_count": 876,
+      "execution_count": 989,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "JO6pLs7ZWlpn"
       },
-      "execution_count": 877,
+      "execution_count": 990,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "XsMqS3Gcqzvv"
       },
-      "execution_count": 878,
+      "execution_count": 991,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "7uJ70a3ZNigJ"
       },
-      "execution_count": 879,
+      "execution_count": 992,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "0T6RvzfCOJfa"
       },
-      "execution_count": 880,
+      "execution_count": 993,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "RqLsooXbUYtO"
       },
-      "execution_count": 881,
+      "execution_count": 994,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "xYfqxQYZriCd"
       },
-      "execution_count": 882,
+      "execution_count": 995,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "fEm8gPksWQ6l"
       },
-      "execution_count": 883,
+      "execution_count": 996,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "zH-nb29BcQhR"
       },
-      "execution_count": 884,
+      "execution_count": 997,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "UBphN0ZzkA_w"
       },
-      "execution_count": 885,
+      "execution_count": 998,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "xgaRaL_jShTw"
       },
-      "execution_count": 886,
+      "execution_count": 999,
       "outputs": []
     },
     {
@@ -311,9 +311,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kbjLLNKj1Kgl",
-        "outputId": "bb0a631e-4428-4d70-fec6-9e3e43b9ceaf"
+        "outputId": "3d51861b-a617-4564-8576-f229d341ea18"
       },
-      "execution_count": 887,
+      "execution_count": 1000,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,18 +322,18 @@
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
             "| Meses | Inventario Inicial |     # Aleatorio     | Demanda | Inventario Final | Faltantes | Ordenes | Inventario mensual promedio |\n",
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
-            "|   1   |        150         |  0.8858586253342164 |    66   |        84        |     0     |    1    |            117.0            |\n",
-            "|   2   |         84         |  0.891575064920636  |    55   |        29        |     0     |    0    |             56.5            |\n",
-            "|   3   |         29         | 0.43650211263208694 |    44   |        0         |     15    |    0    |              10             |\n",
-            "|   4   |         0          |  0.9725764333495572 |    46   |       200        |     46    |    0    |              0              |\n",
-            "|   5   |        200         |  0.8434768782452985 |    43   |       157        |     0     |    0    |            178.5            |\n",
-            "|   6   |        157         |  0.7067245225389025 |    36   |       121        |     0     |    0    |            139.0            |\n",
-            "|   7   |        121         |  0.7071235600108846 |    41   |        80        |     0     |    1    |            100.5            |\n",
-            "|   8   |         80         | 0.22969132397224934 |    40   |        40        |     0     |    0    |             60.0            |\n",
-            "|   9   |         40         |  0.3526433191976166 |    47   |       200        |     7     |    0    |              17             |\n",
-            "|   10  |        200         |  0.8570529632469479 |    66   |       134        |     0     |    0    |            167.0            |\n",
-            "|   11  |        134         |  0.8999019466853572 |    72   |        62        |     0     |    1    |             98.0            |\n",
-            "|   12  |         62         |  0.0960037858191809 |    56   |       206        |     0     |    0    |             34.0            |\n",
+            "|   1   |        150         | 0.41861642720052883 |    57   |        93        |     0     |    1    |            121.5            |\n",
+            "|   2   |         93         |  0.6737151103089439 |    52   |        41        |     0     |    0    |             67.0            |\n",
+            "|   3   |         41         |  0.9604343347154107 |    51   |        0         |     10    |    0    |              16             |\n",
+            "|   4   |         0          |  0.9862432769892858 |    47   |       200        |     47    |    0    |              0              |\n",
+            "|   5   |        200         |  0.6876302209870446 |    41   |       159        |     0     |    0    |            179.5            |\n",
+            "|   6   |        159         |  0.620250497223226  |    35   |       124        |     0     |    0    |            141.5            |\n",
+            "|   7   |        124         |  0.450947810170384  |    39   |        85        |     0     |    1    |            104.5            |\n",
+            "|   8   |         85         |  0.6778503507908481 |    46   |        39        |     0     |    0    |             62.0            |\n",
+            "|   9   |         39         |  0.2737518862122976 |    46   |        0         |     7     |    0    |              17             |\n",
+            "|   10  |         0          |  0.3650570245435151 |    57   |       200        |     57    |    0    |              0              |\n",
+            "|   11  |        200         |  0.4738434609727352 |    63   |       137        |     0     |    0    |            168.5            |\n",
+            "|   12  |        137         |  0.7519491789151805 |    74   |        63        |     0     |    1    |            100.0            |\n",
             "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n"
           ]
         }
@@ -368,16 +368,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-lYuyKt2vfY",
-        "outputId": "898294f9-6029-4d43-b5e7-db5abb2e3e9d"
+        "outputId": "516d9c6e-2d93-457c-9f24-d5947bedd11b"
       },
-      "execution_count": 888,
+      "execution_count": 1001,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Total de ordenes: 200\n",
-            "Faltas totales : 68\n",
+            "Faltas totales : 121\n",
             "Total de Impuestos: 977.5\n"
           ]
         }
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "nzbFrjZJ3Hlx"
       },
-      "execution_count": 889,
+      "execution_count": 1002,
       "outputs": []
     },
     {
@@ -411,18 +411,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YVjymGXP5qa4",
-        "outputId": "8699409a-b0bc-45f8-98ea-db040e44b1a6"
+        "outputId": "51c2b72c-fa84-4f17-f91c-6b1ddc83d294"
       },
-      "execution_count": 890,
+      "execution_count": 1003,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Costo Final:  5332.425\n",
+            " Costo Final:  7982.425\n",
             " Costo ordenes:  300\n",
             " Costo llevar inventario:  1632.425\n",
-            " Costo faltante:  3400\n"
+            " Costo faltante:  6050\n"
           ]
         }
       ]
@@ -449,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "48W2whFx7agL",
-        "outputId": "6bf702b8-ff94-4146-b0b5-a6b40d8bc6ac"
+        "outputId": "e0742297-8654-4375-df88-d2fb784f64ff"
       },
-      "execution_count": 891,
+      "execution_count": 1004,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,10 +460,10 @@
             "+------------------------------+----------+\n",
             "|      Concepto del Costo      |  Costo   |\n",
             "+------------------------------+----------+\n",
-            "|         Costo Final          | 5332.425 |\n",
+            "|         Costo Final          | 7982.425 |\n",
             "|       Costo de Órdenes       |   300    |\n",
             "| Costo de Mantener Inventario | 1632.425 |\n",
-            "|      Costo por Faltante      |   3400   |\n",
+            "|      Costo por Faltante      |   6050   |\n",
             "+------------------------------+----------+\n"
           ]
         }
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "DqnNsoBoQ1pY"
       },
-      "execution_count": 892,
+      "execution_count": 1005,
       "outputs": []
     },
     {
@@ -585,18 +585,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SiMfwhiFAK6C",
-        "outputId": "0388ec70-e770-4acf-c998-e66bbfa9ab26"
+        "outputId": "515b80fb-666f-4c8d-b859-e5b95c3abfa7"
       },
-      "execution_count": 893,
+      "execution_count": 1006,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Costo de ordenar promedio 258.3333333333333\n",
-            "Costo de llevar inventario promedio 1938.4525\n",
-            "Costo faltante promedio 4295.833333333333\n",
-            "Costo total promedio 6492.619166666666\n"
+            "Costo de ordenar promedio 250.0\n",
+            "Costo de llevar inventario promedio 1809.0275000000001\n",
+            "Costo faltante promedio 4704.166666666667\n",
+            "Costo total promedio 6763.194166666665\n"
           ]
         }
       ]
@@ -612,12 +612,81 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def hooke_jeeves(f, x0, delta=0.5, epsilon=1e-5, max_iter=100):\n",
+        "    n = len(x0)\n",
+        "    x = np.array(x0)\n",
+        "    xp = np.array(x0)\n",
+        "    xb = np.array(x0)\n",
+        "    for i in range(max_iter):\n",
+        "        for j in range(n):\n",
+        "            d = np.zeros(n)\n",
+        "            d[j] = delta\n",
+        "            if f(xb + d) < f(xb):\n",
+        "                xb = xb + d\n",
+        "            elif f(xb - d) < f(xb):\n",
+        "                xb = xb - d\n",
+        "        if np.linalg.norm(xb - xp) < epsilon:\n",
+        "            break\n",
+        "        xp = xb + (xb - xp)\n",
+        "        if f(xp) < f(xb):\n",
+        "            xb = xp\n",
+        "        x = xb\n",
+        "    return xb\n",
+        "\n",
+        "# Example simu function definition\n",
+        "def simu(ordenes, nuevaorden, iterations=1000):\n",
+        "    # Dummy implementation, replace with actual logic\n",
+        "    Costo_ordenar_optimo = 100  # Example value\n",
+        "    Costo_llevar_inventario_optimo = 200  # Example value\n",
+        "    Costo_faltante_optimo = 300  # Example value\n",
+        "    Costo_total_optimo = Costo_ordenar_optimo + Costo_llevar_inventario_optimo + Costo_faltante_optimo\n",
+        "    return Costo_ordenar_optimo, Costo_llevar_inventario_optimo, Costo_faltante_optimo, Costo_total_optimo\n",
+        "\n",
+        "# Cost function for optimization\n",
+        "def costo_total(parametros):\n",
+        "    ordenes, nuevaorden = parametros\n",
+        "    _, _, _, costofinal = simu(ordenes, nuevaorden, 1000)\n",
+        "    return costofinal\n",
+        "\n",
+        "x0 = [200, 100]\n",
+        "\n",
+        "# Find the optimal parameters\n",
+        "optimo = hooke_jeeves(costo_total, x0)\n",
+        "uord_opt, nuevaord_opt = optimo\n",
+        "\n",
+        "print(f\"Óptimo No_de_unidades_a_ordenar: {uord_opt}\")\n",
+        "print(f\"Óptimo reorden: {nuevaord_opt}\")\n",
+        "\n",
+        "# Calculate the costs with the optimal values\n",
+        "Costo_ordenar_optimo, Costo_llevar_inventario_optimo, Costo_faltante_optimo, Costo_total_optimo = simu(uord_opt, nuevaord_opt)\n",
+        "print(f\"Costo a ordenar óptimo: {Costo_ordenar_optimo}\")\n",
+        "print(f\"Costo de llevar el inventario óptimo: {Costo_llevar_inventario_optimo}\")\n",
+        "print(f\"Costo faltante óptimo: {Costo_faltante_optimo}\")\n",
+        "print(f\"Costo total óptimo: {Costo_total_optimo}\")"
+      ],
       "metadata": {
-        "id": "HF6b_Q_nIdht"
+        "id": "EJmWVE7CeSMS",
+        "outputId": "885d9332-2465-40ac-83de-169e5ecf9c49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 893,
-      "outputs": []
+      "execution_count": 1007,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Óptimo No_de_unidades_a_ordenar: 200\n",
+            "Óptimo reorden: 100\n",
+            "Costo a ordenar óptimo: 100\n",
+            "Costo de llevar el inventario óptimo: 200\n",
+            "Costo faltante óptimo: 300\n",
+            "Costo total óptimo: 600\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
