--- a/Inventario_Si.ipynb
+++ b/Inventario_Si.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYtMCM/mkBKfo3iTuI12Oh",
+      "authorship_tag": "ABX9TyMYHu80/7oTw3EnZLrFaMAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "i1nmEDXKWjvZ"
       },
-      "execution_count": 989,
+      "execution_count": 1028,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "JO6pLs7ZWlpn"
       },
-      "execution_count": 990,
+      "execution_count": 1029,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "XsMqS3Gcqzvv"
       },
-      "execution_count": 991,
+      "execution_count": 1030,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "7uJ70a3ZNigJ"
       },
-      "execution_count": 992,
+      "execution_count": 1031,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "0T6RvzfCOJfa"
       },
-      "execution_count": 993,
+      "execution_count": 1032,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "RqLsooXbUYtO"
       },
-      "execution_count": 994,
+      "execution_count": 1033,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "xYfqxQYZriCd"
       },
-      "execution_count": 995,
+      "execution_count": 1034,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "fEm8gPksWQ6l"
       },
-      "execution_count": 996,
+      "execution_count": 1035,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "zH-nb29BcQhR"
       },
-      "execution_count": 997,
+      "execution_count": 1036,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "UBphN0ZzkA_w"
       },
-      "execution_count": 998,
+      "execution_count": 1037,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "xgaRaL_jShTw"
       },
-      "execution_count": 999,
+      "execution_count": 1038,
       "outputs": []
     },
     {
@@ -311,30 +311,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kbjLLNKj1Kgl",
-        "outputId": "3d51861b-a617-4564-8576-f229d341ea18"
+        "outputId": "baca464e-ae22-49ff-8c84-c97011f9075a"
       },
-      "execution_count": 1000,
+      "execution_count": 1039,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
-            "| Meses | Inventario Inicial |     # Aleatorio     | Demanda | Inventario Final | Faltantes | Ordenes | Inventario mensual promedio |\n",
-            "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n",
-            "|   1   |        150         | 0.41861642720052883 |    57   |        93        |     0     |    1    |            121.5            |\n",
-            "|   2   |         93         |  0.6737151103089439 |    52   |        41        |     0     |    0    |             67.0            |\n",
-            "|   3   |         41         |  0.9604343347154107 |    51   |        0         |     10    |    0    |              16             |\n",
-            "|   4   |         0          |  0.9862432769892858 |    47   |       200        |     47    |    0    |              0              |\n",
-            "|   5   |        200         |  0.6876302209870446 |    41   |       159        |     0     |    0    |            179.5            |\n",
-            "|   6   |        159         |  0.620250497223226  |    35   |       124        |     0     |    0    |            141.5            |\n",
-            "|   7   |        124         |  0.450947810170384  |    39   |        85        |     0     |    1    |            104.5            |\n",
-            "|   8   |         85         |  0.6778503507908481 |    46   |        39        |     0     |    0    |             62.0            |\n",
-            "|   9   |         39         |  0.2737518862122976 |    46   |        0         |     7     |    0    |              17             |\n",
-            "|   10  |         0          |  0.3650570245435151 |    57   |       200        |     57    |    0    |              0              |\n",
-            "|   11  |        200         |  0.4738434609727352 |    63   |       137        |     0     |    0    |            168.5            |\n",
-            "|   12  |        137         |  0.7519491789151805 |    74   |        63        |     0     |    1    |            100.0            |\n",
-            "+-------+--------------------+---------------------+---------+------------------+-----------+---------+-----------------------------+\n"
+            "+-------+--------------------+----------------------+---------+------------------+-----------+---------+-----------------------------+\n",
+            "| Meses | Inventario Inicial |     # Aleatorio      | Demanda | Inventario Final | Faltantes | Ordenes | Inventario mensual promedio |\n",
+            "+-------+--------------------+----------------------+---------+------------------+-----------+---------+-----------------------------+\n",
+            "|   1   |        150         |  0.5154552527754213  |    60   |        90        |     0     |    1    |            120.0            |\n",
+            "|   2   |         90         |  0.9932594940795122  |    59   |        31        |     0     |    0    |             60.5            |\n",
+            "|   3   |         31         | 0.008997222255403226 |    31   |       200        |     0     |    0    |              16             |\n",
+            "|   4   |        200         |  0.2929454351527213  |    36   |       164        |     0     |    0    |            182.0            |\n",
+            "|   5   |        164         | 0.26027139064667104  |    36   |       128        |     0     |    0    |            146.0            |\n",
+            "|   6   |        128         | 0.014762945136874484 |    25   |       103        |     0     |    0    |            115.5            |\n",
+            "|   7   |        103         |  0.8033702417328729  |    43   |        60        |     0     |    1    |             81.5            |\n",
+            "|   8   |         60         | 0.17155466906103756  |    38   |       222        |     0     |    0    |             41.0            |\n",
+            "|   9   |        222         | 0.28785355221657394  |    46   |       176        |     0     |    0    |            199.0            |\n",
+            "|   10  |        176         |  0.7132889688306103  |    62   |       114        |     0     |    0    |            145.0            |\n",
+            "|   11  |        114         |  0.4306442391224904  |    63   |        51        |     0     |    1    |             82.5            |\n",
+            "|   12  |         51         |   0.78662255033277   |    75   |        0         |     24    |    0    |              17             |\n",
+            "+-------+--------------------+----------------------+---------+------------------+-----------+---------+-----------------------------+\n"
           ]
         }
       ]
@@ -368,17 +368,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-lYuyKt2vfY",
-        "outputId": "516d9c6e-2d93-457c-9f24-d5947bedd11b"
+        "outputId": "0e7e70f4-7721-4246-8e42-0b6e4bde4174"
       },
-      "execution_count": 1001,
+      "execution_count": 1040,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Total de ordenes: 200\n",
-            "Faltas totales : 121\n",
-            "Total de Impuestos: 977.5\n"
+            "Faltas totales : 24\n",
+            "Total de Impuestos: 1206.0\n"
           ]
         }
       ]
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "nzbFrjZJ3Hlx"
       },
-      "execution_count": 1002,
+      "execution_count": 1041,
       "outputs": []
     },
     {
@@ -411,18 +411,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YVjymGXP5qa4",
-        "outputId": "51c2b72c-fa84-4f17-f91c-6b1ddc83d294"
+        "outputId": "3b47c948-28a5-48ff-df24-5fc9b3841c67"
       },
-      "execution_count": 1003,
+      "execution_count": 1042,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Costo Final:  7982.425\n",
+            " Costo Final:  3514.02\n",
             " Costo ordenes:  300\n",
-            " Costo llevar inventario:  1632.425\n",
-            " Costo faltante:  6050\n"
+            " Costo llevar inventario:  2014.02\n",
+            " Costo faltante:  1200\n"
           ]
         }
       ]
@@ -449,22 +449,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "48W2whFx7agL",
-        "outputId": "e0742297-8654-4375-df88-d2fb784f64ff"
+        "outputId": "65b28869-002e-4c00-8af1-73b98af5d133"
       },
-      "execution_count": 1004,
+      "execution_count": 1043,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+------------------------------+----------+\n",
-            "|      Concepto del Costo      |  Costo   |\n",
-            "+------------------------------+----------+\n",
-            "|         Costo Final          | 7982.425 |\n",
-            "|       Costo de Órdenes       |   300    |\n",
-            "| Costo de Mantener Inventario | 1632.425 |\n",
-            "|      Costo por Faltante      |   6050   |\n",
-            "+------------------------------+----------+\n"
+            "+------------------------------+---------+\n",
+            "|      Concepto del Costo      |  Costo  |\n",
+            "+------------------------------+---------+\n",
+            "|         Costo Final          | 3514.02 |\n",
+            "|       Costo de Órdenes       |   300   |\n",
+            "| Costo de Mantener Inventario | 2014.02 |\n",
+            "|      Costo por Faltante      |   1200  |\n",
+            "+------------------------------+---------+\n"
           ]
         }
       ]
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "DqnNsoBoQ1pY"
       },
-      "execution_count": 1005,
+      "execution_count": 1044,
       "outputs": []
     },
     {
@@ -585,18 +585,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SiMfwhiFAK6C",
-        "outputId": "515b80fb-666f-4c8d-b859-e5b95c3abfa7"
+        "outputId": "f39c24af-0521-4430-c142-5fad87400f05"
       },
-      "execution_count": 1006,
+      "execution_count": 1045,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Costo de ordenar promedio 250.0\n",
-            "Costo de llevar inventario promedio 1809.0275000000001\n",
-            "Costo faltante promedio 4704.166666666667\n",
-            "Costo total promedio 6763.194166666665\n"
+            "Costo de ordenar promedio 266.6666666666667\n",
+            "Costo de llevar inventario promedio 1888.9787499999995\n",
+            "Costo faltante promedio 2925.0\n",
+            "Costo total promedio 5080.645416666666\n"
           ]
         }
       ]
@@ -634,7 +634,7 @@
         "        x = xb\n",
         "    return xb\n",
         "\n",
-        "# Example simu function definition\n",
+        "\n",
         "def simu(ordenes, nuevaorden, iterations=1000):\n",
         "    # Dummy implementation, replace with actual logic\n",
         "    Costo_ordenar_optimo = 100  # Example value\n",
@@ -643,7 +643,7 @@
         "    Costo_total_optimo = Costo_ordenar_optimo + Costo_llevar_inventario_optimo + Costo_faltante_optimo\n",
         "    return Costo_ordenar_optimo, Costo_llevar_inventario_optimo, Costo_faltante_optimo, Costo_total_optimo\n",
         "\n",
-        "# Cost function for optimization\n",
+        "\n",
         "def costo_total(parametros):\n",
         "    ordenes, nuevaorden = parametros\n",
         "    _, _, _, costofinal = simu(ordenes, nuevaorden, 1000)\n",
@@ -651,14 +651,14 @@
         "\n",
         "x0 = [200, 100]\n",
         "\n",
-        "# Find the optimal parameters\n",
+        "\n",
         "optimo = hooke_jeeves(costo_total, x0)\n",
         "uord_opt, nuevaord_opt = optimo\n",
         "\n",
         "print(f\"Óptimo No_de_unidades_a_ordenar: {uord_opt}\")\n",
         "print(f\"Óptimo reorden: {nuevaord_opt}\")\n",
         "\n",
-        "# Calculate the costs with the optimal values\n",
+        "\n",
         "Costo_ordenar_optimo, Costo_llevar_inventario_optimo, Costo_faltante_optimo, Costo_total_optimo = simu(uord_opt, nuevaord_opt)\n",
         "print(f\"Costo a ordenar óptimo: {Costo_ordenar_optimo}\")\n",
         "print(f\"Costo de llevar el inventario óptimo: {Costo_llevar_inventario_optimo}\")\n",
@@ -666,13 +666,13 @@
         "print(f\"Costo total óptimo: {Costo_total_optimo}\")"
       ],
       "metadata": {
-        "id": "EJmWVE7CeSMS",
-        "outputId": "885d9332-2465-40ac-83de-169e5ecf9c49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EJmWVE7CeSMS",
+        "outputId": "4d0619e1-aac9-4b90-b00f-dafaa032caf6"
       },
-      "execution_count": 1007,
+      "execution_count": 1046,
       "outputs": [
         {
           "output_type": "stream",
